--- a/Landing.html
+++ b/Landing.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="custom-cursor"></div>
-  <a href="/Final/Shop/Main.html" class="main-page" id="main-page"></a>
+  <a href="Main.html" class="main-page" id="main-page"></a>
   <h1>(°.。ಗдಗ。.°)
   No ErRORS(๑´• .̫ •ू`๑)</h1>
   <div class="button-container">
